<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
            android:gravity="center"
    android:padding="@dimen/demens10dp">

        <EditText
            android:id="@+id/et_dialog_rename_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="@string/update_channel_name"
            android:padding="@dimen/demens10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/bt_dialog_rename_cancle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_margin="@dimen/demens10dp"
            android:padding="@dimen/demens10dp"/>

        <Button
            android:id="@+id/bt_dialog_rename_comfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comfirm"
            android:layout_margin="@dimen/demens10dp"
            android:onClick="onClickComfirm"
            android:padding="@dimen/demens10dp"/>
    </LinearLayout>

</LinearLayout>